welcome.lessons.welcome.bat.bool2.CaughtSpeeding.scala.error
caughtSpeeding:9: error: ';' expected but 'if' found.
		} if (65<speed && speed<=85) {
                  ^caughtSpeeding:14: error: ';' expected but 'else' found.
	} else {
          ^caughtSpeeding:19: error: Unmatched closing brace '}' ignored here
 }
 ^