welcome.lessons.welcome.bat.bool2.CaughtSpeeding.scala.code
def caughtSpeeding(speed:Int, isBirthday:Boolean):Int = {
	if (!isBirthday) {
		if (60<speed && speed<=80) {
			return 1
		} else {
			return 2
		}
	} else if (isBirthday) {
		} if (65<speed && speed<=85) {
			return 1
		} else {
			return 2
		}
	} else {
		return 0
	}
}
